<resources>
    <string name="app_name">ChatApp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification">Verification</string>
    <string name="please_enter_your_phone_number_to_receive_a_verification_code">Please enter your phone number<br /> to receive a verification code.</string>
    <string name="todo">TODO</string>
    <string name="phone">Phone</string>
    <string name="please_enter_the_verification_code_we_sent_to_your_phone_number">Please enter the verification code we sent<br /> to your phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend code?</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="new_group">New group</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="invite_friends">Invite a friends</string>
    <string name="message">Message</string>
    <string name="delete_for_everyone">DELETE FOR EVERYONE</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">DELETE FOR ME</string>
    <string name="about">Add a few words about yourself</string>
    <string name="help">Help</string>
    <string name="online">Online</string>
    <string name="edit_profile">Edit profile</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="check_your_connection_then_refresh_the_page">Check your connection, then refresh <br />the page</string>
    <string name="refresh">Refresh</string>
    <string name="tell_us_why_you_re_reaching_out">Tell us why you\'re reaching out.</string>
    <string name="tell_us_what_s_going_on">Tell us what\'s going on</string>
    <string name="next">next</string>
    <string name="save_changes">Save changes</string>
<!--    &#39;s-->

    <string-array name="reason">

        <item>Something Not Working</item>
        <item>Feedback</item>
        <item>Feature Request</item>
        <item>Questions</item>
        <item>Other</item>

    </string-array>

</resources>