<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/deleteForMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="end"
        android:padding="15dp"
        android:text="@string/delete_for_me"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="end"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deleteForEveryone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="end"
        android:padding="15dp"
        android:text="@string/delete_for_everyone"
        android:textColor="@color/black"
        android:textSize="15sp" />
</LinearLayout>