<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".auth.OtpActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/otp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/verification_code"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/please_enter_the_verification_code_we_sent_to_your_phone_number"
        android:textSize="17sp" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true"
        android:inputType="phone"
        android:textColor="@color/black"
        app:OtpItemCount="6"
        app:OtpLineColor="@color/green"
        app:OtpViewType="line" />

    <TextView
        android:id="@+id/resendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/resend_code"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>