<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.SignupActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/verification" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verification"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/please_enter_your_phone_number_to_receive_a_verification_code"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:weightSum="3">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="2dp"
            android:layout_weight=".2"
            android:background="@drawable/custom_bg"
            android:gravity="center"
            app:ccp_autoFormatNumber="false"
            app:ccp_countryPreference="us,in" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_weight="2.8"
            android:background="@drawable/custom_bg"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="8dp"
            android:singleLine="true"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text_bg"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_next" />

</LinearLayout>