<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <!--  <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:contentInsetStart="0dp"
          app:contentInsetStart="0dp"
          android:background="?android:attr/windowBackground"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <ImageView
                  android:id="@+id/back"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:src="@drawable/ic_arrow_back"
                  android:layout_gravity="center"
                  android:layout_marginStart="10dp" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Edit profile"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:layout_gravity="center"
                  android:layout_marginStart="18dp"
                  android:gravity="center"/>

          </LinearLayout>

      </androidx.appcompat.widget.Toolbar>
  -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/unknown"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_bg"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        app:layout_constraintVertical_bias="0.92"
        app:srcCompat="@drawable/ic_camera" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/custom_bg"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_bg"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/custom_bg"
        android:drawablePadding="10dp"
        android:hint="@string/about"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_about"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/save_changes" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>