<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:contentInsetStart="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/receiverProfileImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/back"
                android:src="@drawable/unknown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/receiverProfileImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/receiverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/receiverStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textColor="@color/white"
                    android:visibility="gone" />

            </LinearLayout>

            <!--    <ImageView
                    android:id="@+id/options"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_more"
                    android:layout_alignParentEnd="true"/>
    -->
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/attachFile"
                android:autofillHints=""
                android:background="@drawable/flag_transparent"
                android:hint="@string/message"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/attachFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_attach_file" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>